# Vantage-Step-Audio-EditX

./: LICENSE  README.md  __init__.py  nodes.py  pyproject.toml  requirements.txt
coreeditx/: model_loader.py  tokenizer.py  tts.py  utils.py
coreeditx/configs/: config.json  linguistic_tokenizer.npy  tokenizer.model  tokenizer_config.json
coreeditx/funasr_detach/auto/: auto_model.py
coreeditx/funasr_detach/download/: download_from_hub.py
coreeditx/quantization/: __init__.py  awq_quantize.py
coreeditx/stepvocoder/cosyvoice2/bigvgan/: bigvgan.py  bigvgan_utils.py
coreeditx/stepvocoder/cosyvoice2/bigvgan/alias_free_activation/torch/: act.py  resample.py
coreeditx/stepvocoder/cosyvoice2/cli/: cosyvoice.py
coreeditx/stepvocoder/cosyvoice2/embedding/: dual_codebook.py
coreeditx/stepvocoder/cosyvoice2/flow/: flow.py  flow_matching.py
coreeditx/stepvocoder/cosyvoice2/hifigan/: f0_predictor.py  generator.py
coreeditx/stepvocoder/cosyvoice2/matcha/: audio.py
coreeditx/stepvocoder/cosyvoice2/transformer/: upsample_encoder_v2.py
coreeditx/stepvocoder/cosyvoice2/utils/: class_utils.py
example_workflows/: Vantage-EditX-Multi-Person-Unlimited.json
